Fix nav menus on narrow displays
Only use the circle icons on wide displays.  When the nav
collapses to a drop-down, show the nav items as text.

Only make the footer sticky on wider displays.

--- a/css/_footer.css
+++ b/css/_footer.css
@@ -1,7 +1,12 @@
 body > footer {
   width: 100%;
-  position: fixed;
   bottom: 0;
+}
+
+@media (min-width: 768px) {
+  body > footer {
+    position: fixed;
+  }
 }
 
 #credit-bar {
